--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build:ci:"ng build --prod --sourceMap=false --base-href /grofgroc/",
+    "build:ci":"ng build --prod --sourceMap=false --base-href /grofgroc/",
     "test:ci":"ng test --watch=false --code-coverage --source-map true",
     "start": "ng serve",
     "build": "ng build",
