--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,7 @@ jobs:
     - uses: actions/checkout@v2
       
       
+      
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
@@ -33,6 +34,13 @@ jobs:
       run: npm run build:ci
     - name: test
       run: npm run test:ci
+    - name: Archive build
+      if: success()
+      uses: actions/upload-artifact@v1
+      with:
+        name: deploy_dist
+        path: dist
+     
       
     - name: Use Node 12.x
       uses: actions/setup-node@v1
@@ -44,4 +52,20 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project
-    
+        
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Download build
+        uses: actions/download-artifact@v1
+        with:
+          name: deploy_dist    
+      - name: deploy on ghpages
+        uses: beverlyhillz/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          BRANCH: gh-pages
+          FOLDER: deploy_dist/grofgroc 
