--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           name: deploy_dist    
       - name: deploy on ghpages
-        uses: beverlyhillz/angular-deploy-gh-pages-actions
+        uses: beverlyhillz/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           BRANCH: gh-pages
